# camera-calibrate

aruco_pos/: CMakeLists.txt  location_of_markers.csv  package.xml
aruco_pos/file/: test0.txt
aruco_pos/include/: aruco_dec.h
aruco_pos/msg/: ArUco_Pos_Att.msg
aruco_pos/src/: ArUco_Dec.cpp  ArUco_Pos_Att.cpp  Marker_Find.cpp  bandstop_filter.cpp  lowpass_filter.cpp
aruco_pos/test/: ArUco_Test.cpp  Aruco_Video_Record.cpp
相机标定/: OpenCV3.2Test.sln
相机标定/OpenCV3.2Test/: OpenCV3.2Test.vcxproj  caliberation_result.txt  main.cpp
相机标定/OpenCV3.2Test/x64/Debug/: vc120.idb
相机标定/OpenCV3.2Test/x64/Debug/OpenCV3.2Test.tlog/: CL.read.1.tlog  CL.write.1.tlog  OpenCV3.2Test.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
相机标定/OpenCV3.2Test/x64/Release/OpenCV3.2Test.tlog/: CL.read.1.tlog  CL.write.1.tlog  OpenCV3.2Test.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
相机标定/res/: caliberation_result.txt
相机标定/x64/Debug/: OpenCV3.2Test.ilk
